force-app/main/default/objects/Destination_Charges__c/Destination_Charges__c.object-meta.xml
<CustomObject>
    <label>Destination Charges</label>
    <nameField>
        <displayFormat>Dest-Charge-{0000}</displayFormat>
        <label>Destination Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destination Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>