force-app/main/default/objects/Destination_Charges__c/fields/Bayan_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bayan_Charges__c</fullName>
    <label>Bayan Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>