force-app/main/default/objects/Destination_Charges__c/fields/Custom_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Custom_Clearance__c</fullName>
    <label>Custom Clearance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>