force-app/main/default/objects/Destination_Charges__c/fields/DO_charges__c.field-meta.xml
<CustomField>
    <fullName>DO_charges__c</fullName>
    <label>DO charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>