force-app/main/default/objects/Destination_Charges__c/fields/RMS__c.field-meta.xml
<CustomField>
    <fullName>RMS__c</fullName>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipName>Clearance_and_Delivery</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>